recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:16: error: not found: value snowSide
snowSide(levels-1, length/3)
^SquareKoch:18: error: not found: value snowSide
	snowSide(levels-1,length/3)
        ^SquareKoch:19: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
	droite()
              ^SquareKoch:20: error: not found: value snowSide
	snowSide(levels-1,length/3)
        ^SquareKoch:22: error: not found: value snowSide
	snowSide(levels-1,length/3)
        ^