recursion.lessons.recursion.koch.SquareKoch.scala.code
def snowSquare (levels:Int, length:Double) {
    squareSide(levels, length);
    right(90);
    setColor(Color.blue);
    squareSide(levels, length);
    right(90);
    setColor(Color.orange);
    squareSide(levels, length);
    right(90);
    setColor(Color.magenta);
    squareSide(levels, length);
    right(90);
}
def squareSide(levels:Int, length:Double) {
snowSide(levels-1, length/3)
	gauche(90)
	snowSide(levels-1,length/3)
	droite()
	snowSide(levels-1,length/3)
	gauche(60)
	snowSide(levels-1,length/3)
}
